--- a/exercises/07_coding_agent.ipynb
+++ b/exercises/07_coding_agent.ipynb
@@ -2,10 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "56a1d13d",
+   "id": "ea57a7c6",
    "metadata": {},
    "source": [
-    "# Exercise 8: Coding Agent - \"Plan in Code\"\n",
+    "# Exercise 7: Coding Agent - \"Plan in Code\"\n",
     "\n",
     "In this exercise, we implement an agent that performs \"Deep Research\" by generating and executing Python code.\n",
     "Instead of standard tool calling (JSON), the agent writes a Python script that orchestrates tool usage.\n",
@@ -20,33 +20,33 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "840a2f3d",
+   "id": "5375f900",
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pip install smolagents databricks-langchain ddgs langchain-community\n",
+    "%pip install langchain smolagents databricks-langchain ddgs langchain-community\n",
     "%restart_python"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7d5bdcc3",
+   "id": "6ded3588",
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "from ddgs import DDGS\n",
-    "from langchain_core.messages import HumanMessage, SystemMessage\n",
-    "from smolagents import LocalPythonExecutor\n",
+    "from langchain.messages import HumanMessage, SystemMessage\n",
     "\n",
     "# Initialize Model\n",
-    "from llm import model as llm"
+    "from llm import model as llm\n",
+    "from smolagents import LocalPythonExecutor"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "2a7c11b3",
+   "id": "ec527139",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e1e46fbc",
+   "id": "075614ee",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -78,7 +78,7 @@
     "        return f\"Search Error: {e}\"\n",
     "\n",
     "\n",
-    "# Exercise 8.1: Define the `synthesize` tool\n",
+    "# Exercise 7.1: Define the `synthesize` tool\n",
     "# This tool should take a string (content) and use the LLM to summarize/synthesize it.\n",
     "# We want the agent to use this to process search results.\n",
     "# Hint: Use `llm.invoke` with a prompt.\n",
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f5b95e5",
+   "id": "079da082",
    "metadata": {},
    "source": [
     "## 2. Setup Code Executor\n",
@@ -109,11 +109,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e12c4197",
+   "id": "f9cf57e2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Exercise 8.2: Initialize LocalPythonExecutor\n",
+    "# Exercise 7.2: Initialize LocalPythonExecutor\n",
     "# Inject `search` and `synthesize` into the environment.\n",
     "# Hint: Inject tools into `interpreter.state`.\n",
     "# <solution>\n",
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f3731a12",
+   "id": "1ed3b14c",
    "metadata": {},
    "source": [
     "## 3. Define the Agent Logic\n",
@@ -141,7 +141,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3062ece7",
+   "id": "9e514c46",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +169,7 @@
     "\n",
     "    messages = [SystemMessage(content=SYSTEM_PROMPT), HumanMessage(content=user_query)]\n",
     "\n",
-    "    # Exercise 8.3: Implement the generation and execution\n",
+    "    # Exercise 7.3: Implement the generation and execution\n",
     "    # 1. Invoke LLM to get code.\n",
     "    # 2. Clean code (strip ```python ... ```).\n",
     "    # 3. Execute using `interpreter`.\n",
@@ -207,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf92962f",
+   "id": "6c5c76bf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +220,8 @@
     "        \"Round the final answer to 2 decimal places.\"\n",
     "    )\n",
     "    result = run_coding_agent(query)\n",
-    "    print(f\"\\n=== FINAL OUTPUT ===\\n{result}\")"
+    "    print(f\"\\n=== FINAL OUTPUT ===\\n{result}\")\n",
+    "    # should be 2439.55"
    ]
   }
  ],
