--- a/exercises/08_image_understanding.ipynb
+++ b/exercises/08_image_understanding.ipynb
@@ -2,10 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e9f68528",
+   "id": "8f3dad9e",
    "metadata": {},
    "source": [
-    "# Image Understanding Chatbot\n",
+    "# Exercise 8: Image Understanding\n",
     "\n",
     "First, we'll need to install a couple packages. If using serverless, add the packages `langchain` and `databricks-langchain` to the environment.\n",
     "If not using serverless run the below cell.\n"
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bea1874e",
+   "id": "ed649548",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8644d901",
+   "id": "95962740",
    "metadata": {},
    "source": [
     "We'll be working with Databricks LLMs that support vision capabilities.\n",
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29122eff",
+   "id": "5cfc77f5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,11 +82,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "359cfcfa",
+   "id": "56921dfe",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Exercise 7.1:\n",
+    "# Exercise 8.1:\n",
     "#\n",
     "# Build a simple chatbot that can understand images using langchain.\n",
     "# The user should provide an image URL or path at the beginning.\n",
@@ -143,7 +143,7 @@
     "        if user_input.lower() in [\"exit\", \"quit\"]:\n",
     "            break\n",
     "\n",
-    "        # Exercise 7.1.1: Add user message and invoke model\n",
+    "        # Exercise 8.1.1: Add user message and invoke model\n",
     "        # <solution>\n",
     "        chat_history.append(HumanMessage(content=user_input))\n",
     "        response = model.invoke(chat_history)\n",
@@ -155,7 +155,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e032f063",
+   "id": "3243e5a7",
    "metadata": {},
    "outputs": [],
    "source": [
